[project]
name = "python-concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens>=3.0.0",
    "atomicwrites>=1.4.1",
    "attrs>=25.3.0",
    "backcall>=0.2.0",
    "black[jupyter]>=25.1.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "cvxpy>=1.7.2",
    "debugpy>=1.8.16",
    "decorator>=5.2.1",
    "entrypoints>=0.4",
    "executing>=2.2.0",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "idna>=3.10",
    "imageio>=2.37.0",
    "iniconfig>=2.1.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "isort>=6.0.1",
    "jedi>=0.19.2",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "matplotlib-inline>=0.1.7",
    "md-dead-link-check>=1.2.0",
    "mypy-extensions>=1.1.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "packaging>=25.0",
    "parso>=0.8.5",
    "pathspec>=0.12.1",
    "pickleshare>=0.7.5",
    "platformdirs>=4.4.0",
    "pluggy>=1.6.0",
    "prompt-toolkit>=3.0.52",
    "protobuf>=6.32.0",
    "pure-eval>=0.2.3",
    "py>=1.11.0",
    "pydantic>=2.11.7",
    "pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyzmq>=27.0.2",
    "requests>=2.32.5",
    "scalene>=1.5.54",
    "six>=1.17.0",
    "snakeviz>=2.2.2",
    "stack-data>=0.6.3",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "tornado>=6.5.2",
    "traitlets>=5.14.3",
    "tuna>=0.5.11",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "wcwidth>=0.2.13",
]

[tool.isort]
skip = ["venv"]
profile = "black"

